--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,7 +14,7 @@ FROM nginx:alpine
 
 EXPOSE 80
 
-COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build /app/dist/quiz-stream/browser /usr/share/nginx/html
 
