--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,7 @@
             "production": {
               "budgets": [
                 {
-                  "type": "initial",  
+                  "type": "initial",
                   "maximumWarning": "500kB",
                   "maximumError": "2MB"
                 },
@@ -102,8 +102,22 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
