--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -32,7 +32,7 @@ phases:
   build:
     commands:
       # Build Docker image
-      - docker build -t $ECR_REPO_NAME:$GIT_SHA-$BUILD_NUMBER .
+      - docker build -t $ECR_REPO_NAME:$GIT_SHA-$BUILD_NUMBER -f ./compose/Dockerfile.prod .
 
   post_build:
     commands:
