--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -14,14 +14,13 @@ phases:
       - ng lint
       # Set build variables and fetch secrets
       - |
-        export BUILD_NUMBER=$CODEBUILD_BUILD_ID
         export FORMATTED_DATE=$(date --utc +"%a, %-d %b, %H:%M")
         export GIT_SHA=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
         export API_URL=$(aws ssm get-parameter --name "/angular/API_URL" --query "Parameter.Value" --output text)
         export API_KEY=$(aws ssm get-parameter --name "/angular/API_KEY" --query "Parameter.Value" --output text)
       # Replace environment variables
       - |
-        sed -i "s|\$BUILD_NUMBER|${BUILD_NUMBER}|g" ./src/app/about/about.component.html
+        sed -i "s|\$BUILD_NUMBER|${CODEBUILD_BUILD_NUMBER}|g" ./src/app/about/about.component.html
         sed -i "s|\$BUILD_DATE|${FORMATTED_DATE}|g" ./src/app/about/about.component.html
         sed -i "s|\$GIT_SHA|${GIT_SHA}|g" ./src/app/about/about.component.html
         sed -i "s|'API_URL'|'${API_URL}'|g" ./src/app/shared/environment/environment.ts
@@ -32,12 +31,12 @@ phases:
   build:
     commands:
       # Build Docker image
-      - docker build -t $ECR_REPO_NAME:$GIT_SHA-$BUILD_NUMBER -f ./compose/Dockerfile.prod .
+      - docker build -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER -f ./compose/Dockerfile.prod .
 
   post_build:
     commands:
       # Push to ECR
-      - docker push $ECR_REPO_NAME:$GIT_SHA-$BUILD_NUMBER
+      - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
 
 artifacts:
   files:
