fix buildspec issue

--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -10,6 +10,7 @@ phases:
 
   pre_build:
     commands:
+      - set -euo pipefail
       # Run linter
       - ng lint
       # Set build variables and fetch secrets
@@ -31,12 +32,13 @@ phases:
   build:
     commands:
       # Build Docker image
-      - docker build -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER -f ./compose/Dockerfile.prod .
+      - docker build -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER -t $ECR_REPO_NAME:latest -f ./compose/Dockerfile.prod .
 
   post_build:
     commands:
-      # Push to ECR
+      # Push both tags to ECR
       - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
+      - docker push $ECR_REPO_NAME:latest
 
 artifacts:
   files:
