add codedeploy dependency

--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -31,24 +31,22 @@ phases:
 
   build:
     commands:
-      # Build Docker image
-      - docker build -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER -t $ECR_REPO_NAME:latest -f ./compose/Dockerfile.prod .
+      - docker build --platform=linux/amd64 \
+        -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER \
+        -t $ECR_REPO_NAME:latest \
+        -f ./compose/Dockerfile.prod .
 
   post_build:
     commands:
       # Push both tags to ECR
       - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
       - docker push $ECR_REPO_NAME:latest
+      # Create new image definition for CodeDeploy to redeploy ECS task
+      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
 
 artifacts:
   files:
-    - dist/**/*
     - package.json
     - package-lock.json
-    - nginx.conf
-    - Dockerfile
+    - imagedefinitions.json
   base-directory: "."
-
-cache:
-  paths:
-    - node_modules/**/*
