--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -31,10 +31,14 @@ phases:
 
   build:
     commands:
-      - docker build --platform=linux/amd64 \
-        -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER \
-        -t $ECR_REPO_NAME:latest \
-        -f ./compose/Dockerfile.prod .
+      # Build Docker image
+      - |
+        docker build \
+          --platform=linux/amd64 \
+          -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER \
+          -t $ECR_REPO_NAME:latest \
+          -f ./compose/Dockerfile.prod \
+          .
 
   post_build:
     commands:
