fix appspec placement

--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -47,9 +47,11 @@ phases:
       - docker push $ECR_REPO_NAME:latest
       # Create new image definition for CodeDeploy to redeploy ECS task
       - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
+      # Place appspec.yaml in the root directory
+      - cp .aws/appspec.yaml ./appspec.yaml
 
 artifacts:
   files:
     - imagedefinitions.json
-    - .aws/appspec.yaml
+    - appspec.yaml
   base-directory: "."
