--- a/.aws/appspec.yaml
+++ b/.aws/appspec.yaml
@@ -1,9 +1,9 @@
-version: 1
+version: 0.0
 Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "imagedefinitions.json"
+        TaskDefinition: "arn:aws:ecs:us-east-1:259417942296:task-definition/AngularTaskDefinition:1"
         LoadBalancerInfo:
           ContainerName: "angular-task"
           ContainerPort: 80
