put task def into ssm

--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -19,6 +19,8 @@ phases:
         export GIT_SHA=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
         export API_URL=$(aws ssm get-parameter --name "/angular/API_URL" --query "Parameter.Value" --output text)
         export API_KEY=$(aws ssm get-parameter --name "/angular/API_KEY" --query "Parameter.Value" --output text)
+        export ECS_TASK_DEFINITION=$(aws ssm get-parameter --name "/angular/ECS_TASK_DEFINITION" --query "Parameter.Value" --output text)
+
       # Replace environment variables
       - |
         sed -i "s|\$BUILD_NUMBER|${CODEBUILD_BUILD_NUMBER}|g" ./src/app/about/about.component.html
@@ -49,6 +51,7 @@ phases:
       - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
+      - sed -i "s|\$ECS_TASK_DEFINITION|${ECS_TASK_DEFINITION}|g" ./appspec.yaml
 
 artifacts:
   files:
