--- a/.aws/appspec.yaml
+++ b/.aws/appspec.yaml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "arn:aws:ecs:us-east-1:259417942296:task-definition/AngularTaskDefinition:1"
+        TaskDefinition: "ECS_TASK_DEFINITION"
         LoadBalancerInfo:
           ContainerName: "angular-task"
           ContainerPort: 80
