--- a/.aws/appspec.yaml
+++ b/.aws/appspec.yaml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "ECS_TASK_DEFINITION"
+        TaskDefinition: "imagedefinitions.json"
         LoadBalancerInfo:
           ContainerName: "angular-task"
           ContainerPort: 80
