--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -51,7 +51,7 @@ phases:
       - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
-      - sed -i "s|\$ECS_TASK_DEFINITION|${ECS_TASK_DEFINITION}|g" ./appspec.yaml
+      # - sed -i "s|ECS_TASK_DEFINITION|${ECS_TASK_DEFINITION}|g" ./appspec.yaml
 
 artifacts:
   files:
