--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -49,6 +49,9 @@ phases:
       - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
+      - cat ./appspec.yaml
+      - cat -A ./appspec.yaml
+      - sed -i '1s/^\xEF\xBB\xBF//' appspec.yaml
 
 artifacts:
   files:
