fix according to docu

--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -46,15 +46,14 @@ phases:
       - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
       - docker push $ECR_REPO_NAME:latest
       # Create new image definition for CodeDeploy to redeploy ECS task
-      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
+      - echo "{\"imageURI\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}" > imageDetail.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
-      - cat ./appspec.yaml
-      - cat -A ./appspec.yaml
-      - sed -i '1s/^\xEF\xBB\xBF//' appspec.yaml
+      - cp .aws/taskdef.json ./taskdef.json
 
 artifacts:
   files:
-    - imagedefinitions.json
+    - imageDetail.json
     - appspec.yaml
+    - taskdef.json
   base-directory: "."
