--- a/.aws/appspec.yaml
+++ b/.aws/appspec.yaml
@@ -1,8 +1,9 @@
-version: 1
+version: 0.0
 Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
+        TaskDefinition: <TASK_DEFINITION>
         LoadBalancerInfo:
           ContainerName: "angular-task"
           ContainerPort: 80
