--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -46,7 +46,7 @@ phases:
       - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
       - docker push $ECR_REPO_NAME:latest
       # Create new image definition for CodeDeploy to redeploy ECS task
-      - echo "{\"imageURI\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}" > imageDetail.json
+      - echo "{\"ImageURI\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}" > imageDetail.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
       - cp .aws/taskdef.json ./taskdef.json
