--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -50,6 +50,11 @@ phases:
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
       - cp .aws/taskdef.json ./taskdef.json
+      - cat imageDetail.json
+      - cat appspec.yaml
+      - cat taskdef.json
+      - sed -i '1s/^\xEF\xBB\xBF//' appspec.yaml
+      - sed -i '1s/^\xEF\xBB\xBF//' taskdef.json
 
 artifacts:
   files:
