--- a/.aws/appspec.yaml
+++ b/.aws/appspec.yaml
@@ -1,9 +1,10 @@
-version: 1
+version: 0.0
 Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "<TASK_DEFINITION>"
+        TaskDefinition: <TASK_DEFINITION>
         LoadBalancerInfo:
           ContainerName: "angular-task"
           ContainerPort: 80
+        PlatformVersion: "LATEST"
