switch from blue/green to std

--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -19,6 +19,8 @@ phases:
         export GIT_SHA=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
         export API_URL=$(aws ssm get-parameter --name "/angular/API_URL" --query "Parameter.Value" --output text)
         export API_KEY=$(aws ssm get-parameter --name "/angular/API_KEY" --query "Parameter.Value" --output text)
+        export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+        export AWS_REGION=${AWS_REGION:-us-east-1}
       # Replace environment variables
       - |
         sed -i "s|\$BUILD_NUMBER|${CODEBUILD_BUILD_NUMBER}|g" ./src/app/about/about.component.html
@@ -26,8 +28,16 @@ phases:
         sed -i "s|\$GIT_SHA|${GIT_SHA}|g" ./src/app/about/about.component.html
         sed -i "s|'API_URL'|'${API_URL}'|g" ./src/app/shared/environment/environment.ts
         sed -i "s|'API_KEY'|'${API_KEY}'|g" ./src/app/shared/environment/environment.ts
+      - sed -i "s|<AWS_ACCOUNT_ID>|$AWS_ACCOUNT_ID|g" .aws/taskdef.json
+      - sed -i "s|<AWS_REGION>|$AWS_REGION|g" .aws/taskdef.json
       # ECR login
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+
+      - echo "ECR_REPO_NAME: $ECR_REPO_NAME"
+      - echo "GIT_SHA: $GIT_SHA"
+      - echo "CODEBUILD_BUILD_NUMBER: $CODEBUILD_BUILD_NUMBER"
+      - echo "AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID"
+      - echo "AWS_REGION: $AWS_REGION"
 
   build:
     commands:
@@ -46,14 +56,17 @@ phases:
       - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
       - docker push $ECR_REPO_NAME:latest
       # Create new image definition for CodeDeploy to redeploy ECS task
-      - echo "{\"ImageURI\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}" > imageDetail.json
+      # For ECS Blue/Green Deployment
+      #- echo "{\"ImageURI\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}" > imageDetail.json
+      # For ECS Standard Deployment
+      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
       - cp .aws/taskdef.json ./taskdef.json
 
 artifacts:
   files:
-    - imageDetail.json
+    - imagedefinitions.json
     - appspec.yaml
     - taskdef.json
   base-directory: "."
