--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -28,15 +28,16 @@ phases:
         sed -i "s|\$GIT_SHA|${GIT_SHA}|g" ./src/app/about/about.component.html
         sed -i "s|'API_URL'|'${API_URL}'|g" ./src/app/shared/environment/environment.ts
         sed -i "s|'API_KEY'|'${API_KEY}'|g" ./src/app/shared/environment/environment.ts
-      - sed -i "s|<AWS_ACCOUNT_ID>|$AWS_ACCOUNT_ID|g" .aws/taskdef.json
-      - sed -i "s|<AWS_REGION>|$AWS_REGION|g" .aws/taskdef.json
+        sed -i "s|<AWS_ACCOUNT_ID>|$AWS_ACCOUNT_ID|g" .aws/taskdef.json
+        sed -i "s|<AWS_REGION>|$AWS_REGION|g" .aws/taskdef.json
       # ECR login
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-      - echo "ECR_REPO_NAME: $ECR_REPO_NAME"
-      - echo "GIT_SHA: $GIT_SHA"
-      - echo "CODEBUILD_BUILD_NUMBER: $CODEBUILD_BUILD_NUMBER"
-      - echo "AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID"
-      - echo "AWS_REGION: $AWS_REGION"
+      - |
+        echo "ECR_REPO_NAME: $ECR_REPO_NAME"
+        echo "GIT_SHA: $GIT_SHA"
+        echo "CODEBUILD_BUILD_NUMBER: $CODEBUILD_BUILD_NUMBER"
+        echo "AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID"
+        echo "AWS_REGION: $AWS_REGION"
 
   build:
     commands:
