--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -32,12 +32,6 @@ phases:
         sed -i "s|<AWS_REGION>|$AWS_REGION|g" .aws/taskdef.json
       # ECR login
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-      - |
-        echo "ECR_REPO_NAME: $ECR_REPO_NAME"
-        echo "GIT_SHA: $GIT_SHA"
-        echo "CODEBUILD_BUILD_NUMBER: $CODEBUILD_BUILD_NUMBER"
-        echo "AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID"
-        echo "AWS_REGION: $AWS_REGION"
 
   build:
     commands:
@@ -55,10 +49,7 @@ phases:
       # Push both tags to ECR
       - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
       - docker push $ECR_REPO_NAME:latest
-      # Create new image definition for CodeDeploy to redeploy ECS task
-      # For ECS Blue/Green Deployment
-      #- echo "{\"ImageURI\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}" > imageDetail.json
-      # For ECS Standard Deployment
+      # Create imagedefinitions.json for ECS Standard Deployment
       - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
