--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -17,6 +17,7 @@ phases:
       - |
         export FORMATTED_DATE=$(date --utc +"%a, %-d %b, %H:%M")
         export GIT_SHA=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
+        export IMAGE_TAG=$GIT_SHA-$CODEBUILD_BUILD_NUMBER
         export API_URL=$(aws ssm get-parameter --name "/angular/API_URL" --query "Parameter.Value" --output text)
         export API_KEY=$(aws ssm get-parameter --name "/angular/API_KEY" --query "Parameter.Value" --output text)
         export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
@@ -31,33 +32,36 @@ phases:
         sed -i "s|<AWS_ACCOUNT_ID>|$AWS_ACCOUNT_ID|g" .aws/taskdef.json
         sed -i "s|<AWS_REGION>|$AWS_REGION|g" .aws/taskdef.json
       # ECR login
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+      #- aws ecr get-login-password --region $AWS_REGION | docker login --username AWS #--password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
   build:
     commands:
       # Build Docker image
-      - |
-        docker build \
-          --platform=linux/amd64 \
-          -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER \
-          -t $ECR_REPO_NAME:latest \
-          -f ./compose/Dockerfile.prod \
-          .
+      #- |
+      #  docker build \
+      #    --platform=linux/amd64 \
+      #    -t $ECR_REPO_NAME:$IMAGE_TAG \
+      #    -t $ECR_REPO_NAME:latest \
+      #    -f ./compose/Dockerfile.prod \
+      #    .
 
   post_build:
     commands:
       # Push both tags to ECR
-      - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
-      - docker push $ECR_REPO_NAME:latest
+      #- docker push $ECR_REPO_NAME:$IMAGE_TAG
+      #- docker push $ECR_REPO_NAME:latest
       # Create imagedefinitions.json for ECS Standard Deployment
-      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
+      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$IMAGE_TAG\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
       - cp .aws/taskdef.json ./taskdef.json
+      # Write image tag to pipeline build variables
+      - echo "IMAGE_TAG=$IMAGE_TAG" >> build.properties
 
 artifacts:
   files:
-    - imagedefinitions.json
     - appspec.yaml
     - taskdef.json
+    - imagedefinitions.json
+    #- /compose/Dockerfile.prod
   base-directory: "."
