--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -15,19 +15,16 @@ phases:
       - ng lint
       # Set build variables and fetch secrets
       - |
+        export IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
         export FORMATTED_DATE=$(date --utc +"%a, %-d %b, %H:%M")
         export GIT_SHA=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
         export API_URL=$(aws ssm get-parameter --name "/angular/API_URL" --query "Parameter.Value" --output text)
-        export API_KEY=$(aws ssm get-parameter --name "/angular/API_KEY" --query "Parameter.Value" --output text)
         export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
         export AWS_REGION=${AWS_REGION:-us-east-1}
       # Replace environment variables
       - |
-        sed -i "s|\$BUILD_NUMBER|${CODEBUILD_BUILD_NUMBER}|g" ./src/app/about/about.component.html
         sed -i "s|\$BUILD_DATE|${FORMATTED_DATE}|g" ./src/app/about/about.component.html
         sed -i "s|\$GIT_SHA|${GIT_SHA}|g" ./src/app/about/about.component.html
-        sed -i "s|'API_URL'|'${API_URL}'|g" ./src/app/shared/environment/environment.ts
-        sed -i "s|'API_KEY'|'${API_KEY}'|g" ./src/app/shared/environment/environment.ts
         sed -i "s|<AWS_ACCOUNT_ID>|$AWS_ACCOUNT_ID|g" .aws/taskdef.json
         sed -i "s|<AWS_REGION>|$AWS_REGION|g" .aws/taskdef.json
       # ECR login
@@ -39,7 +36,8 @@ phases:
       - |
         docker build \
           --platform=linux/amd64 \
-          -t $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER \
+          --build-arg API_URL=$API_URL \
+          -t $ECR_REPO_NAME:$IMAGE_TAG \
           -t $ECR_REPO_NAME:latest \
           -f ./compose/Dockerfile.prod \
           .
@@ -47,10 +45,10 @@ phases:
   post_build:
     commands:
       # Push both tags to ECR
-      - docker push $ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER
+      - docker push $ECR_REPO_NAME:$IMAGE_TAG
       - docker push $ECR_REPO_NAME:latest
       # Create imagedefinitions.json for ECS Standard Deployment
-      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$GIT_SHA-$CODEBUILD_BUILD_NUMBER\"}]" > imagedefinitions.json
+      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$IMAGE_TAG\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
       - cp .aws/taskdef.json ./taskdef.json
