implement aws cognito

--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -19,6 +19,8 @@ phases:
         export FORMATTED_DATE=$(date --utc +"%a, %-d %b, %H:%M")
         export GIT_SHA=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
         export API_URL=$(aws ssm get-parameter --name "/angular/API_URL" --query "Parameter.Value" --output text)
+        export COGNITO_USER_POOL_ID=$(aws ssm get-parameter --name "/angular/COGNITO_USER_POOL_ID" --query "Parameter.Value" --output text)
+        export COGNITO_USER_POOL_CLIENT_ID=$(aws ssm get-parameter --name "/angular/COGNITO_USER_POOL_CLIENT_ID" --query "Parameter.Value" --output text)
         export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
         export AWS_REGION=${AWS_REGION:-us-east-1}
       # Replace environment variables
@@ -37,6 +39,9 @@ phases:
         docker build \
           --platform=linux/amd64 \
           --build-arg API_URL=$API_URL \
+          --build-arg NG_ENVIRONMENT=production \
+          --build-arg COGNITO_USER_POOL_ID=$COGNITO_USER_POOL_ID \
+          --build-arg COGNITO_USER_POOL_CLIENT_ID=$COGNITO_USER_POOL_CLIENT_ID \
           -t $ECR_REPO_NAME:$IMAGE_TAG \
           -t $ECR_REPO_NAME:latest \
           -f ./compose/Dockerfile.prod \
