--- a/compose/Dockerfile.prod
+++ b/compose/Dockerfile.prod
@@ -1,8 +1,14 @@
 FROM public.ecr.aws/docker/library/node:20-alpine AS build
 
 ARG API_URL
+ARG NG_ENVIRONMENT
+ARG COGNITO_USER_POOL_ID
+ARG COGNITO_USER_POOL_CLIENT_ID
 
 ENV API_URL=${API_URL}
+ENV NG_ENVIRONMENT=${NG_ENVIRONMENT}
+ENV COGNITO_USER_POOL_ID=${COGNITO_USER_POOL_ID}
+ENV COGNITO_USER_POOL_CLIENT_ID=${COGNITO_USER_POOL_CLIENT_ID}
 
 WORKDIR /app
 
@@ -13,6 +19,9 @@ RUN npm ci --silent
 COPY ./ ./
 
 RUN sed -i "s|API_URL|${API_URL}|g" ./src/app/shared/environment/environment.ts
+RUN sed -i "s|NG_ENVIRONMENT|${NG_ENVIRONMENT}|g" ./src/app/shared/environment/environment.ts
+RUN sed -i "s|COGNITO_USER_POOL_ID|${COGNITO_USER_POOL_ID}|g" ./src/app/shared/environment/environment.ts
+RUN sed -i "s|COGNITO_USER_POOL_CLIENT_ID|${COGNITO_USER_POOL_CLIENT_ID}|g" ./src/app/shared/environment/environment.ts
 
 RUN npm run build --prod
 
