--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@aws-amplify/auth": "^6.12.1",
+    "aws-amplify": "^6.14.1",
     "quiz-stream": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
