--- a/.aws/appspec.yaml
+++ b/.aws/appspec.yaml
@@ -5,6 +5,5 @@ Resources:
       Properties:
         TaskDefinition: "<TASK_DEFINITION>"
         LoadBalancerInfo:
-          ContainerName: "angular-task"
+          ContainerName: "FrontendContainer"
           ContainerPort: 80
-        PlatformVersion: "LATEST"
