--- a/.aws/buildspec.yaml
+++ b/.aws/buildspec.yaml
@@ -15,12 +15,12 @@ phases:
       - ng lint
       # Set build variables and fetch secrets
       - |
-        export IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
         export FORMATTED_DATE=$(date --utc +"%a, %-d %b, %H:%M")
         export GIT_SHA=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c1-7)
+        export IMAGE_TAG=$GIT_SHA-$CODEBUILD_BUILD_NUMBER
         export API_URL=$(aws ssm get-parameter --name "/angular/API_URL" --query "Parameter.Value" --output text)
-        export COGNITO_USER_POOL_ID=$(aws ssm get-parameter --name "/angular/COGNITO_USER_POOL_ID" --query "Parameter.Value" --output text)
-        export COGNITO_USER_POOL_CLIENT_ID=$(aws ssm get-parameter --name "/angular/COGNITO_USER_POOL_CLIENT_ID" --query "Parameter.Value" --output text)
+        export COGNITO_USER_POOL_ID=$(aws ssm get-parameter --name "/cognito/COGNITO_USER_POOL_ID" --query "Parameter.Value" --output text)
+        export COGNITO_USER_POOL_CLIENT_ID=$(aws ssm get-parameter --name "/cognito/COGNITO_USER_POOL_CLIENT_ID" --query "Parameter.Value" --output text)
         export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
         export AWS_REGION=${AWS_REGION:-us-east-1}
       # Replace environment variables
@@ -53,7 +53,7 @@ phases:
       - docker push $ECR_REPO_NAME:$IMAGE_TAG
       - docker push $ECR_REPO_NAME:latest
       # Create imagedefinitions.json for ECS Standard Deployment
-      - echo "[{\"name\":\"angular-task\",\"imageUri\":\"$ECR_REPO_NAME:$IMAGE_TAG\"}]" > imagedefinitions.json
+      - echo "[{\"name\":\"FrontendContainer\",\"imageUri\":\"$ECR_REPO_NAME:$IMAGE_TAG\"}]" > imagedefinitions.json
       # Place appspec.yaml in the root directory
       - cp .aws/appspec.yaml ./appspec.yaml
       - cp .aws/taskdef.json ./taskdef.json
